# ExploringGRPC

./: README.md
CppClient/: CMakeLists.txt  ReadMe.md  conanfile.txt
CppClient/client/: CMakeLists.txt  main.cpp  stockclient.cpp  stockclient.h  threadmanager.cpp  threadmanager.h
CppClient/client/data/: MarketVolume.csv
CppClient/protos/: CMakeLists.txt  stock_messages.proto  stock_service.proto
CppClient/stock_data_stream/client/: CMakeLists.txt  main.cpp  stockclient.cpp  stockclient.h  threadmanager.cpp  threadmanager.h
PythonServer/: stock_server.py
PythonServer/data/: MarkePrice.csv
PythonServer/protos/: stock_messages.proto  stock_service.proto
